--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,5 +1,23 @@
 <%- include('partials/header'); -%>
 
-<h1>Sign Up</h1>
+<form>
+    <h2>Sign Up</h2>
+    <label for="email">Email</label>
+    <input type="text" name="email" required />
+    <div class="email error"></div>
+    <label for="password">Password</label>
+    <input type="password" name="password" required />
+    <div class="password error"></div>
+    <button>Sign Up</button>
+</form>
+
+<script>
+    const form = document.querySelector('form');
+    form.addEventListener('submit', (e) => {
+        e.preventDefault();
+        const email = form.email.value;
+        const password = form.password.value;
+    })
+</script>
 
 <%- include('partials/footer'); -%>
