adds jwt and cookie in user create, routes user at signup

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,7 +8,7 @@
     <label for="password">Password</label>
     <input type="password" name="password" required />
     <div class="password error"></div>
-    <button>Log In</button>
+    <button class="btn">Log In</button>
 </form>
 
 <script>
