--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -8,15 +8,42 @@
     <label for="password">Password</label>
     <input type="password" name="password" required />
     <div class="password error"></div>
-    <button>Sign Up</button>
+    <button class="btn">Sign Up</button>
 </form>
 
 <script>
     const form = document.querySelector('form');
-    form.addEventListener('submit', (e) => {
+    const emailError = document.querySelector('.email.error');
+    const passwordError = document.querySelector('.password.error');
+
+    form.addEventListener('submit', async (e) => {
         e.preventDefault();
+        //reset previous errors
+        emailError.textContent = '';
+        passwordError.textContent = '';
         const email = form.email.value;
         const password = form.password.value;
+
+        try {
+            const res = await fetch('/signup', {
+                method: 'POST',
+                body: JSON.stringify({ email, password }),
+                headers: { 'Content-Type': 'application/json' }
+            });
+            //what we get back from the controller res.status(201).json({user: user._id})
+            const data = await res.json();
+            if(data.errors) {
+                emailError.textContent = data.errors.email;
+                passwordError.textContent = data.errors.password;
+            }
+            //if data response from controller has a user property then its success, send user to homepage
+            if(data.user) {
+                location.assign('/')
+            }
+        }
+        catch (err) {
+            console.log(err);
+        }
     })
 </script>
 
