--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,11 +13,42 @@
 
 <script>
     const form = document.querySelector('form');
-    form.addEventListener('submit', (e) => {
+
+    const emailError = document.querySelector('.email.error');
+    const passwordError = document.querySelector('.password.error');
+
+    form.addEventListener('submit', async (e) => {
         e.preventDefault();
+        //reset previous errors
+        emailError.textContent = '';
+        passwordError.textContent = '';
+
+        //get values
         const email = form.email.value;
         const password = form.password.value;
+
+        try {
+            const res = await fetch('/login', {
+                method: 'POST',
+                body: JSON.stringify({ email, password }),
+                headers: { 'Content-Type': 'application/json' }
+            });
+            //what we get back from the controller res.status(201).json({user: user._id})
+            const data = await res.json();
+            if(data.errors) {
+                emailError.textContent = data.errors.email;
+                passwordError.textContent = data.errors.password;
+            }
+            //if data response from controller has a user property then its success, send user to homepage
+            if(data.user) {
+                location.assign('/')
+            }
+        }
+        catch (err) {
+            console.log(err);
+        }
     })
 </script>
 
 <%- include('partials/footer'); -%>
+
