adds conditional rendering for login logout nav buttons

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,9 +5,8 @@
     <img src="/smoothie.png" alt="">
   </div>
   <div class="headings">
-    <h2>Smoothie Recipes</h2>
-    <h3>By Ninjas For Ninjas</h3>
-    <a href="/smoothies" class="btn">View Recipes</a>
+    <h2>Smoothies</h2>
+    <a href="/smoothies" class="btn">View Smoothies</a>
   </div>
 </header>
 
