--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,11 +2,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>JWT</title>
   <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
   <nav>
-    <h1><a href="/">Ninja Smoothies</a></h1>
+    <h1><a href="/">JWT Project</a></h1>
+    <ul>
+      <% if (user) { %>
+        <li> Welcome, <%= user.email %> </li>
+        <li><a href="/logout">Log Out</a></li>
+      <% } else { %>}
+        <li><a href="/login">Log In</a></li>
+        <li><a href="/signup" class="btn">Sign Up</a></li>
+      <% } %>
+    </ul>
   </nav>
   
