--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,7 +12,7 @@
       <% if (user) { %>
         <li> Welcome, <%= user.email %> </li>
         <li><a href="/logout">Log Out</a></li>
-      <% } else { %>}
+      <% } else { %>
         <li><a href="/login">Log In</a></li>
         <li><a href="/signup" class="btn">Sign Up</a></li>
       <% } %>
